# Regime-Shift-Analysis

./: .gitignore  README.md  demo.py  etl_pipeline.py  generate_visualizations.py
python/: requirements.txt
python/notebooks/: 01_exploratory_analysis.ipynb  02_orbit_benchmarking.ipynb  05_interview_story.ipynb
python/src/: __init__.py  models.py  shock_registry.py  visualizations.py
rust_etl/: Cargo.toml
rust_etl/src/: data.rs  errors.rs  etl.rs  features.rs  main.rs
tests/: test_analysis.py
visualizations/: index.html
