[package]
name = "resilience_liquidity"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"

[[bin]]
name = "resilience_liquidity"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
